--- a/puppet/hiera/common.yaml
+++ b/puppet/hiera/common.yaml
@@ -11,4 +11,5 @@ version::spring-boot: 1.2.1
 url::sts: http://download.springsource.com/release/STS/3.6.3.SR1/dist/e4.4
 url::sts::filename: spring-tool-suite-3.6.3.SR1-e4.4.1-linux-gtk-x86_64.tar.gz
 
+password::user: ethan
 
