--- a/puppet/hiera/common.yaml
+++ b/puppet/hiera/common.yaml
@@ -8,6 +8,10 @@ version::redis: 2.6.4
 version::rvm: 1.22.3
 version::spring-boot: 1.2.1
 
+version::sts: 3.6.3.SR1
+version::eclipse::release: 4.4
+version::eclipse::release::minor: 1
+
 url::sts: http://download.springsource.com/release/STS/3.6.3.SR1/dist/e4.4
 url::sts::filename: spring-tool-suite-3.6.3.SR1-e4.4.1-linux-gtk-x86_64.tar.gz
 
